--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://essam1212.github.io/movies/",
-  "name": "movies",
+  "homepage": "https://essam1212.github.io/trending",
+  "name": "trending",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
