--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://essam1212.github.io/trending",
   "name": "trending",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "^2.11.5",
